# devops-engineer-from-scratch-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  sonar-project.properties
brain_games/: brain_even_game.py  cli.py  game_engine.py  utils.py
brain_games/games/: brain_calc_game.py  brain_even_game.py  brain_gcd_game.py  brain_prime_game.py  brain_progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
tests/: test_brain_calc_game.py  test_brain_even_game.py  test_brain_gcd.py  test_brain_prime_game.py  test_brain_progression_game.py  test_game_engine.py
