[project]
name = "hexlet-code"
version = "0.1.0"
description = "CLI brain games: even, calc, gcd, progression, prime"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "hexlet student", email = "example@gmail.com" }]
dependencies = ["prompt>=0.4.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = ["pytest>=9.1.1", "pytest-cov>=7.1.0", "ruff>=0.15.20"]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
